corrected prelaoder and gallery overlap

--- a/gmun/src/components/Preloader.css
+++ b/gmun/src/components/Preloader.css
@@ -27,7 +27,7 @@
 }
 
 /* Rotating logo styles */
-.logo {
+.logo1 {
     position: relative;
     width: 150px;
     /* Increased size for better visibility */
